--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,51 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+
     npm install
     npm run build
-  displayName: 'npm install and build'
+    script: npm ci
+  displayName: npm install
+
+- task: Npm@1
+  displayName: 'npm custom'
+  inputs:
+    command: custom
+    workingDir: '$(Build.SourcesDirectory)'
+    verbose: false
+    customCommand: 'install --global gatsby-cli'
+
+- task: Npm@1
+  displayName: 'npm install'
+  inputs:
+    workingDir: '$(Build.SourcesDirectory)'
+    verbose: false
+
+- task: CopyFiles@2
+  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
+  inputs:
+    SourceFolder: '$(agent.builddirectory)'
+    Contents: |
+     **\*.js
+      **\*.json
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: cart'
+  inputs:
+    ArtifactName: cart
+
+- task: ArchiveFiles@2
+  displayName: 'Archive $(build.artifactstagingdirectory)'
+  inputs:
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+
+- task: AzureRmWebAppDeployment@4
+  displayName: 'Azure App Service Deploy: Hosptial'
+  inputs:
+    azureSubscription: 'Free Trial (de41a4b5-07b4-4eff-ba63-33c5643b5f9a)'
+    appType: webAppLinux
+    WebAppName: Hosptial
+    packageForLinux: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+
+
